# yhwh

./: Cargo.toml  README.md  build.rs  tasks.txt  temp.txt
crates/math/: Cargo.toml
crates/math/src/: aabb.rs
crates/yhwh_audio/: Cargo.toml
crates/yhwh_core/: Cargo.toml
res/models/: Barrel.mtl  door_wall.glb
res/scenes/: test.json  test2.json
res/shaders/: animation.wgsl  bloom.wgsl  blur.wgsl  cube_map.wgsl  debug.wgsl  instance.wgsl  lighting.wgsl  mipmap.wgsl  outline.wgsl  postprocess.wgsl  simple.wgsl
src/: asset_manager.rs  bind_group_manager.rs  camera.rs  cube_map.rs  engine.rs  instance.rs  lib.rs  light_uniform.rs  main.rs  material.rs  mesh_nodes.rs  model.rs  pipeline_builder.rs  pipeline_manager.rs  player.rs  renderer_common.rs  scene.rs  ssbo.rs  texture.rs  u8slice.rs  uniform.rs  uniform_manager.rs  uniform_types.rs  vertex.rs  wgpu_context.rs  wgpu_renderer.rs
src/animation/: animation.rs  animation_player.rs  keyframes.rs  mod.rs  node.rs  skin.rs
src/common/: constants.rs  create_info.rs  enums.rs  errors.rs  mod.rs  types.rs
src/egui_renderer/: egui_renderer.rs  mod.rs  ui_manager.rs
src/input/: input.rs  keyboard.rs  mod.rs  mouse.rs  yhwh_keys.rs
src/objects/: animated_game_object.rs  animated_object.rs  game_object.rs  light_object.rs  mod.rs
src/physics/: physics.rs
src/render_groups/: mod.rs  postprocess_group.rs
src/render_passes/: animation_pass.rs  emissive_pass.rs  lighting_pass.rs  mod.rs  outline_pass.rs  postprocess_pass.rs  skybox_pass.rs
src/utils/: file.rs  json.rs  mod.rs  unique_id.rs
(+3 files in other folders)
