[package]
name = "yhwh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.2"
cgmath = "0.18.0"
env_logger = "0.11.8"
gltf = "1.4.1"
image = "0.25.6"
pollster = "0.4.0"
tobj = {version = "4.0.3", default-features = false, features = ["async"] }
wgpu = "24.0.5"
winit = "0.30.12"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
