[package]
name = "yhwh"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "./crates/math" }
cgmath = { workspace = true }
anyhow = "1.0.98"
bytemuck = "1.23.2"
egui = { version = "0.31.1", features = ["default_fonts"] }
egui-wgpu = "0.31.1"
egui-winit = { version = "0.31.1", default-features = false }
env_logger = "0.11.8"
gltf = {version = "1.4.1", default-features=false, features=["import", "utils", "names", "extensions", "extras"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
pollster = "0.4.0"
tobj = { version = "4.0.3", default-features = false }
wgpu = { version = "24.0.5", default-features = false, features=["wgsl"] }
winit = "0.30.12"
rapier3d = { version = "0.29.0", features = [ "simd-stable" ] }

[workspace.dependencies]
cgmath = "0.18.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[workspace]
resolver = "3"
members = [
    "crates/*"
]
